--- a/MALViewer/src/styles.scss
+++ b/MALViewer/src/styles.scss
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+$color-1: #0d1017;
+$color-2: #872341;
+$color-3: #872341;
+$color-4: #BE3144;
+$color-5: #E17564;
