--- a/MALViewer/src/app/shared/components/menu/menu.html
+++ b/MALViewer/src/app/shared/components/menu/menu.html
@@ -1,1 +1,4 @@
-<p>menu works!</p>
+<nav class="menu">
+  <a routerLink="/" routerLinkActive="active">Home</a>
+  <a routerLink="/seasonals" routerLinkActive="active">Seasonals</a>
+</nav>
