--- a/MALViewer/src/app/pages/home/home.html
+++ b/MALViewer/src/app/pages/home/home.html
@@ -1,1 +1,9 @@
 <p>home works!</p>
+
+@for (anime of topAnime(); track anime.mal_id) {
+<app-tile [name]="anime.title_english" [src]="anime.images.jpg.image_url">
+  {{ anime.title_english }}
+</app-tile>
+} @empty {
+<li>There are no anime.</li>
+}
