--- a/MALViewer/src/app/shared/components/tile/tile.html
+++ b/MALViewer/src/app/shared/components/tile/tile.html
@@ -1,4 +1,6 @@
-<div>
-  <img src="{{ src }}" alt="{{ name }}" />
-  <ng-content />
+<div class="tile">
+  <div class="image">
+    <img src="{{ src }}" alt="{{ name }}" />
+  </div>
+  <div class="title">{{ name }}</div>
 </div>
