homepage: tile-list

--- a/MALViewer/src/app/layout/main-layout/main-layout.html
+++ b/MALViewer/src/app/layout/main-layout/main-layout.html
@@ -6,9 +6,7 @@
     alignItems: 'center'
   }"
 >
-  <div
-    [ngStyle]="{ width: '100%', maxWidth: '1980px', border: 'red solid 1px' }"
-  >
+  <div [ngStyle]="{ width: '100%', maxWidth: '1980px' }">
     <app-menu></app-menu>
     <router-outlet></router-outlet>
   </div>
