tile-list: playing around with styles

--- a/MALViewer/src/app/pages/home/home.html
+++ b/MALViewer/src/app/pages/home/home.html
@@ -1,2 +1,4 @@
-<app-tile-list title="Top anime" [tiles]="topAnime()" />
-<app-tile-list title="Current season" [tiles]="currentSeason()" />
+<div style="display: flex; flex-direction: column; gap: 2rem">
+  <app-tile-list title="Top anime" [tiles]="topAnime()" />
+  <app-tile-list title="Current season" [tiles]="currentSeason()" />
+</div>
