--- a/MALViewer/src/app/shared/components/tile/tile.scss
+++ b/MALViewer/src/app/shared/components/tile/tile.scss
@@ -12,7 +12,7 @@
   .title {
     font-weight: 500;
     font-size: 1rem;
-    color: #872341;
+    color: #E17564;
     padding: 4px 0px;
     width: 100%;
     overflow: hidden;
