setup: favicon, use styles from color stylesheet

--- a/MALViewer/src/app/assets/styles/_colors.scss
+++ b/MALViewer/src/app/assets/styles/_colors.scss
@@ -1,4 +1,6 @@
-$color-1: #0d1017;
-$color-2: #872341;
+$color-1: #22252c;
+$color-1-light: lighten($color-1, 5%);
+$color-2: #3F3250;
+$color-2-light: lighten($color-2, 20%);
 $color-3: #BE3144;
-$color-4: #E17564;
+$color-4: #c0b3a0;
