--- a/MALViewer/src/app/shared/components/tile-list/tile-list.scss
+++ b/MALViewer/src/app/shared/components/tile-list/tile-list.scss
@@ -1,23 +1,27 @@
+@use 'colors' as *;
+
 .container {
   display: 'flex';
   flex-direction: 'column';
 }
 
 .list-title {
-  font-size: 1.25rem;
-  color: darkmagenta;
-  padding: 6px 12px;
+  font-size: 1.4rem;
+  color: $color-3;
+  padding: 12px 0px;
   font-weight: 500;
 }
 
 .tile-box {
   display: flex;
   flex-direction: row;
-  width: 100%;
   flex-wrap: nowrap;
+  gap: 1rem;
+
+  width: 100%;
   overflow-x: scroll;
   border-radius: 12px;
-  background-color: #0d1017;
+  background-color: $color-1-light;
   padding: 8px;
   scrollbar-width: none;
   -ms-overflow-style: none;
