--- a/MALViewer/src/app/shared/components/menu/menu.scss
+++ b/MALViewer/src/app/shared/components/menu/menu.scss
@@ -1,20 +1,21 @@
+@use 'colors' as *;
+
 .menu {
   position: sticky;
   top: 0;
   display: flex;
-  gap: 1.5rem;
-  padding: 1rem 2rem;
+  gap: 5rem;
+  padding: 1rem 0%;
   z-index: 1000;
 
   a {
     text-decoration: none;
-    color: #872341;
+    color: $color-2;
+    font-size: 1.5rem;
     font-weight: 500;
-    padding-left: 1rem;
-    padding-right: 1rem;
 
     &:hover {
-      color: #E17564;
+      color: $color-2-light;
     }
   }
 }
