--- a/MALViewer/src/app/shared/components/tile/tile.scss
+++ b/MALViewer/src/app/shared/components/tile/tile.scss
@@ -1,6 +1,23 @@
+@use 'colors' as *;
+
 .tile {
   padding: 0.25rem;
   width: 225px;
+
+  .score {
+    color: white;
+
+    width: 3rem;
+    height: 3rem;
+    background-color: $color-3;
+    border-radius: 30px;
+    margin: 2px;
+
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
   .image {
     border-radius: 12px;
@@ -12,9 +29,19 @@
   .title {
     font-weight: 500;
     font-size: 1rem;
-    color: #E17564;
-    padding: 4px 0px;
+    color: white;
     width: 100%;
     overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+
+  .subtitle {
+    font-size: 0.9rem;
+    color: $color-4;
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 }
