--- a/MALViewer/src/app/shared/components/tile/tile.html
+++ b/MALViewer/src/app/shared/components/tile/tile.html
@@ -1,6 +1,14 @@
 <div class="tile">
+  <div style="display: flex; flex-direction: row; justify-content: flex-end">
+    <div class="score">
+      {{ score }}
+    </div>
+  </div>
   <div class="image">
     <img src="{{ src }}" alt="{{ name }}" />
   </div>
-  <div class="title">{{ name }}</div>
+  <div style="padding: 4px 0px">
+    <div class="title">{{ name }}</div>
+    <div class="subtitle">{{ japaneseName }}</div>
+  </div>
 </div>
