--- a/MALViewer/src/app/shared/components/tile-list/tile-list.html
+++ b/MALViewer/src/app/shared/components/tile-list/tile-list.html
@@ -2,12 +2,7 @@
   <div class="list-title">{{ title }}</div>
   <div class="tile-box">
     @for (tile of tiles; track tile.mal_id) {
-    <app-tile
-      [name]="tile.title_english"
-      [japaneseName]="tile.title_japanese"
-      [score]="tile.score"
-      [src]="tile.images.jpg.image_url"
-    />
+    <app-tile [anime]="tile" />
     }
   </div>
 </div>
