colors: backgroundcolor and theme

--- a/MALViewer/src/app/pages/home/home.html
+++ b/MALViewer/src/app/pages/home/home.html
@@ -1,8 +1,6 @@
 <div style="display: flex; flex-direction: column; gap: 2rem">
   <div style="display: flex; justify-content: center; padding: 40px 0px">
-    <div style="color: darkblue; font-size: 3.5rem; font-weight: 700">
-      Find all your anime in one place
-    </div>
+    <h1>Find all your anime in <strong>one place</strong></h1>
   </div>
   <app-tile-list title="Top anime" [tiles]="topAnime()" />
   <app-tile-list title="Current season" [tiles]="currentSeason()" />
