--- a/MALViewer/src/app/shared/components/tile/tile.scss
+++ b/MALViewer/src/app/shared/components/tile/tile.scss
@@ -5,15 +5,17 @@
   width: 225px;
 
   .score {
-    color: white;
+    color: $color-5;
 
     width: 3rem;
     height: 3rem;
     background-color: $color-3;
     border-radius: 30px;
-    margin: 2px;
 
-    position: absolute;
+    z-index: 1;
+    margin: -32px;
+    transform: translate(-36px, 36px);
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -35,7 +37,7 @@
   .title {
     font-weight: 500;
     font-size: 1rem;
-    color: white;
+    color: $color-5;
     width: 100%;
     overflow: hidden;
     white-space: nowrap;
