--- a/MALViewer/src/app/layout/main-layout/main-layout.html
+++ b/MALViewer/src/app/layout/main-layout/main-layout.html
@@ -6,7 +6,13 @@
     alignItems: 'center'
   }"
 >
-  <div [ngStyle]="{ width: '100%', maxWidth: 'min(90vw, 1980px)', marginBottom: '50px'  }">
+  <div
+    [ngStyle]="{
+      width: '100%',
+      maxWidth: 'min(85dvw, 1980px)',
+      marginBottom: '50px'
+    }"
+  >
     <app-menu></app-menu>
     <router-outlet></router-outlet>
   </div>
