--- a/MALViewer/src/app/pages/seasonals/seasonals.html
+++ b/MALViewer/src/app/pages/seasonals/seasonals.html
@@ -1,6 +1,6 @@
 @for (day of orderedDays(); track day) {
 <app-tile-list
   [title]="day.charAt(0).toUpperCase() + day.slice(1)"
-  [tiles]="currentSeasonSchedules[day]?.() ?? []"
+  [tiles]="schedules[day]?.() ?? []"
 />
 }
