--- a/MALViewer/src/app/shared/components/menu/menu.html
+++ b/MALViewer/src/app/shared/components/menu/menu.html
@@ -1,4 +1,5 @@
 <nav class="menu">
   <a routerLink="/" routerLinkActive="active">Home</a>
   <a routerLink="/seasonals" routerLinkActive="active">Seasonals</a>
+  <a routerLink="/user" routerLinkActive="active">My anime</a>
 </nav>
