--- a/MALViewer/src/app/shared/components/tiles/user-anime-tile/user-anime-tile.html
+++ b/MALViewer/src/app/shared/components/tiles/user-anime-tile/user-anime-tile.html
@@ -1,6 +1,6 @@
 <app-base-tile
-  image_url="{{ this.anime?.entry?.images?.jpg?.image_url }}"
-  title="{{ this.anime?.entry?.title }}"
+  image_url="{{ this.anime?.node?.main_picture?.medium }}"
+  title="{{ this.anime?.node?.title }}"
   link="{{ this.watchLink }}"
-  topRight="{{ `${this.anime?.episodes_seen} / ${this.anime?.episodes_total}` }}"
+  topRight="{{ `-` }}"
 />
