--- a/MALViewer/src/app/shared/components/menu/menu.html
+++ b/MALViewer/src/app/shared/components/menu/menu.html
@@ -1,13 +1,15 @@
 <nav class="menu">
   <a routerLink="/" routerLinkActive="active">Home</a>
   <a routerLink="/seasonals" routerLinkActive="active">Seasonals</a>
-  <a routerLink="/user" routerLinkActive="active">My anime</a>
+  @if (auth.user(); as user) {
+    <a routerLink="/user" routerLinkActive="active">My anime</a>
+  }
 
   @if (auth.user(); as user) {
-  <span>Logged in as {{ user.name }}</span>
-  <button (click)="logout()">Logout</button>
+    <span>Logged in as {{ user.name }}</span>
+    <button (click)="logout()">Logout</button>
   } @else {
-  <div>{{ auth.user()?.name }}</div>
-  <button (click)="login()">Login</button>
+    <div>{{ auth.user()?.name }}</div>
+    <button (click)="login()">Login</button>
   }
 </nav>
