--- a/MALViewer/src/app/shared/components/menu/menu.html
+++ b/MALViewer/src/app/shared/components/menu/menu.html
@@ -1,15 +1,21 @@
 <nav class="menu">
-  <a routerLink="/" routerLinkActive="active">Home</a>
-  <a routerLink="/seasonals" routerLinkActive="active">Seasonals</a>
-  @if (auth.user(); as user) {
+  <div style="display: flex; flex-direction: row; gap: 4rem">
+    <a routerLink="/" routerLinkActive="active">Home</a>
+    <a routerLink="/seasonals" routerLinkActive="active">Seasonals</a>
+    @if (auth.user(); as user) {
     <a routerLink="/user" routerLinkActive="active">My anime</a>
-  }
+    }
+  </div>
 
-  @if (auth.user(); as user) {
-    <span>Logged in as {{ user.name }}</span>
-    <button (click)="logout()">Logout</button>
-  } @else {
+  <div
+    style="display: flex; flex-direction: row; gap: 2rem; align-items: center"
+  >
+    @if (auth.user(); as user) {
+    <span class="logged-in-user">Logged in as {{ user.name }}</span>
+    <button (click)="logout()">Log out</button>
+    } @else {
     <div>{{ auth.user()?.name }}</div>
-    <button (click)="login()">Login</button>
-  }
+    <button (click)="login()">Log in</button>
+    }
+  </div>
 </nav>
