--- a/MALViewer/src/app/layout/main-layout/main-layout.html
+++ b/MALViewer/src/app/layout/main-layout/main-layout.html
@@ -14,6 +14,10 @@
     }"
   >
     <app-menu></app-menu>
+    @if (this.auth.isAuthorizing()) {
+    <div style="color: white">Logging you in...</div>
+    } @else {
     <router-outlet></router-outlet>
+    }
   </div>
 </div>
