--- a/MALViewer/src/app/pages/user/user.html
+++ b/MALViewer/src/app/pages/user/user.html
@@ -1,3 +1,8 @@
 <div style="display: flex; flex-direction: column; gap: 2rem">
-  <app-tile-list title="Watching" [tiles]="userAnimelist()" tileType="user" />
+  <app-tile-list
+    title="Watching"
+    [tiles]="userAnimelist() ?? []"
+    tileType="user"
+    [isLoading]="userAnimelist() === null"
+  />
 </div>
