--- a/MALViewer/src/app/shared/components/loaders/circular-loader/circular-loader.html
+++ b/MALViewer/src/app/shared/components/loaders/circular-loader/circular-loader.html
@@ -3,10 +3,13 @@
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
+    gap: 1rem;
     justify-content: center;
     align-items: center;
     padding: 24px;
   "
 >
   <span class="loader"></span>
+  <div style="color: white">{{ this.text }}</div>
 </div>
