--- a/MALViewer/src/app/shared/components/tile-list/tile-list.html
+++ b/MALViewer/src/app/shared/components/tile-list/tile-list.html
@@ -5,13 +5,22 @@
     <button class="scroll-btn left" (click)="scrollLeft()">◀</button>
 
     <div class="tile-box" #scrollContainer>
-      @if (this.tileType === 'user') { @for (tile of userAnimeItemTiles(); track
-      tile.node.id) {
-      <app-user-anime-tile [anime]="tile" />
-      } } @if (this.tileType === 'anime') { @for (tile of animeItemTiles();
-      track tile.mal_id) {
-      <app-anime-tile [anime]="tile" />
-      } }
+      @if (isLoading) {
+        <div style="align-self: center; justify-self: center">
+          <app-circular-loader />
+        </div>
+      } @else { 
+        @if (this.tileType === 'user') {
+          @for (tile of userAnimeItemTiles(); track tile.node.id) {
+            <app-user-anime-tile [anime]="tile" />
+          }
+        } 
+        @if (this.tileType === 'anime') { 
+          @for (tile of animeItemTiles(); track tile.mal_id) {
+            <app-anime-tile [anime]="tile" />
+          }
+        }
+      }
     </div>
 
     <button class="scroll-btn right" (click)="scrollRight()">▶</button>
